--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,1 +1,45 @@
-/* You can add global styles to this file, and also import other style files */
+@font-face {
+    font-family: 'Spline Sans';
+    src: url('assets/static/fonts/SplineSans-Regular.woff2');
+}
+
+@font-face {
+    font-family: 'Poppins';
+    src: url('assets/static/fonts/Poppins-Light.woff2');
+}
+
+body {
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+    font-family: 'Spline Sans', Arial, Helvetica, sans-serif;
+}
+
+h1, h2, h3, h4, h5, h6, a {
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+}
+
+.button-white {
+    background-color: hsla(0, 0%, 100%, 0.2);
+    padding: 6px 20px;
+    border-radius: 20px;
+    text-decoration: none;
+    color: white;
+    transition: 0.1s;
+    transition-property: background-color;
+    font-weight: bold;
+
+    &:hover {
+        background-color: hsla(0, 0%, 100%, 0.30);
+    }
+} 
+
+.container {
+    max-width: 80%;
+    margin: 0 auto;
+    padding: 0 15px;
+
+    &.first {
+        padding-top: 80px;
+    }
+}
