More home page styling progress

--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -1,6 +1,14 @@
 <div class="hero-image">
     <div class="container first">
-        <p>test text</p>
+        <div class="d-flex h-100 flex-align-items-center">
+            <div class="flex-item-50">
+                <h1 class="text-large white hero-text">
+                    Photography done right.
+                </h1>
+            </div>
+            
+        </div>
+        
     </div>
 </div>
 <div style="height: 1800px;">
