--- a/client/src/app/components/pages/home/home.component.scss
+++ b/client/src/app/components/pages/home/home.component.scss
@@ -1,6 +1,25 @@
 .hero-image {
     width: 100%;
-    background-image: url('/assets/static/images/11109074334_880f24f495_k1.jpg');
+    background-image: url("/assets/static/images/11109074334_880f24f495_k1.jpg");
     background-size: cover;
     height: 90vh;
+}
+
+.hero-image::before {
+    content: "";
+    position: absolute;
+    top: 0;
+    bottom: 10vh;
+    left: 0;
+    right: 0;
+    background-color: rgba(0, 0, 0, 0.336);
+}
+
+.container {
+    position: relative;
+    z-index: 2;
+
+    &.first {
+        height: 90vh;
+    }
 }
