--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -9,8 +9,8 @@ nav {
     position: relative;
     max-width: 80%;
     margin: 0 auto;
-    padding: 0 15px;
     color: white;
+    z-index: 3;
 }
 
 .nav-container {
