--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -15,6 +15,10 @@ body {
     font-family: 'Spline Sans', Arial, Helvetica, sans-serif;
 }
 
+*, *::before, *::after {
+    box-sizing: inherit;
+}
+
 h1, h2, h3, h4, h5, h6, a {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
 }
@@ -37,9 +41,35 @@ h1, h2, h3, h4, h5, h6, a {
 .container {
     max-width: 80%;
     margin: 0 auto;
-    padding: 0 15px;
+    padding: 0 10px;
 
     &.first {
         padding-top: 80px;
     }
 }
+
+.h-100 {
+    height: 100%;
+}
+
+.d-flex {
+    display: flex;
+}
+
+.flex-align-items-center {
+    align-items: center;
+}
+
+.flex-item-50 {
+    width: 50%;
+}
+
+.text-large {
+    font-size: 7rem;
+    font-weight: bold;
+}
+
+.white {
+    color: white;
+}
+
