--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -11,6 +11,10 @@
         
     </div>
 </div>
+<section class="container">
+    <h2 class="text-section-header">Examples of our work</h2>
+    <app-carousel></app-carousel>
+</section>
 <div style="height: 1800px;">
 
 </div>
