--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,5 @@
+@import '_variables.scss';
+
 @font-face {
     font-family: 'Spline Sans';
     src: url('/assets/static/fonts/SplineSans-Regular.woff2');
@@ -66,6 +68,11 @@ h1, h2, h3, h4, h5, h6, a {
 
 .text-large {
     font-size: 7rem;
+    font-weight: bold;
+}
+
+.text-section-header {
+    font-size: 2.5rem;
     font-weight: bold;
 }
 
