Fix maximum budget issue

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -4,4 +4,5 @@
     --secondary-colour: #E98520;
     --white: #FFFFFF;
     --black: #070D0E;
+    --swiper-theme-color: var(--primary-colour-secondary);
 }
