--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -1,3 +1,6 @@
+@import 'swiper/scss';
+@import 'swiper/scss/navigation';
+@import 'swiper/scss/pagination';
 @import '_variables.scss';
 
 @font-face {
@@ -78,5 +81,18 @@ h1, h2, h3, h4, h5, h6, a {
 
 .white {
     color: white;
+}
+
+.swiper {
+    width: 100%;
+    height: 600px;
+    border-radius: 1rem;
+}
+
+.swiper-slide img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
 }
 
