Implement polaroid image layout

--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -6,7 +6,28 @@
                     Photography done right.
                 </h1>
             </div>
-            
+            <div class="flex-item-50">
+                <div class="image-stack">
+                    <div class="image-stack-item">
+                        <div class="polaroid">
+                            <img src="/assets/static/images/3927516198_0e2e033c1e_o.jpg" alt="Old harbour">
+                        </div>
+                    </div>
+                    <div class="image-stack-item">
+                        <div class="polaroid">
+                            <img src="/assets/static/images/4991381941_8bb81ac04a_b.jpg" alt="Mountain lake">
+                        </div>
+                    </div>
+                    <div class="image-stack-item">
+                        <div class="polaroid">
+                            <img src="/assets/static/images/6994151422_3d9cd8546a_b.jpg" alt="Wave beach">
+                        </div>
+                    </div>
+                    <div class="image-stack-item text-centre">
+                        <a href="/gallery" class="button white large"><span>View our work <i class="bi bi-arrow-right-short"></i></span></a>
+                    </div>
+                </div>
+            </div>
         </div>
         
     </div>
