--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -11,7 +11,7 @@
                     <li><a [routerLink]="['/gallery']">Gallery</a></li>
                 </ul>
             </div>
-            <a href="/about" class="button-white"><span>Contact us <i class="bi bi-arrow-right-short"></i></span></a>
+            <a href="/about" class="button transparent"><span>Contact us <i class="bi bi-arrow-right-short"></i></span></a>
         </div>
     </nav>
 </header>
