--- a/client/src/app/components/pages/home/home.component.scss
+++ b/client/src/app/components/pages/home/home.component.scss
@@ -23,3 +23,68 @@
         height: 90vh;
     }
 }
+
+.image-stack {
+    padding: 5rem;
+    display: grid;
+    grid-template-columns: repeat(12, 1fr);
+    position: relative;
+    
+    .image-stack-item  {
+        transition: 0.3s transform;
+
+        .polaroid {
+            background: #fff;
+            padding: 0.7rem 0.7rem 4rem 0.7rem;
+            box-shadow: 0 0.2rem 1.2rem rgba(0,0,0,0.4);
+            border-radius: 0.2rem;
+            
+            img {
+                max-width: 100%;
+            }
+        }
+    }
+
+    .image-stack-item:nth-child(1) {
+        grid-column: 1 / span 8;
+        grid-row: 1;
+        padding-top: 20%;
+        z-index: 11;
+        transform: rotate(5deg);   
+    }
+
+    .image-stack-item:nth-child(2) {
+        grid-column: 5 / -1;
+        grid-row: 1;
+        z-index: 10;
+        transform: rotate(-4deg);
+    }
+
+    .image-stack-item:nth-child(3) {
+        grid-column: 5 / -2;
+        grid-row: 1;
+        padding-top: 45%;
+        z-index: 12;
+        transform: rotate(-8deg);
+    }
+
+    .image-stack-item:last-child {
+        grid-column: 1 / -1;
+        grid-row: 2;
+        padding-top: 10%;
+    }
+
+    &:hover {
+        .image-stack-item:nth-child(1) {
+            transform: rotate(-2deg);   
+        }
+    
+        .image-stack-item:nth-child(2) {
+            transform: rotate(2deg);
+        }
+    
+        .image-stack-item:nth-child(3) {
+            transform: rotate(4deg);
+        }
+    }
+}
