Start implementing home page cards

--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -36,6 +36,18 @@
     <h2 class="text-section-header">Examples of our work</h2>
     <app-carousel></app-carousel>
 </section>
+<section class="container pt-1">
+    <div class="cards-container">
+        <div class="card">
+            <h1>Test card</h1>
+            <p>Some content goes here</p>
+        </div>
+        <div class="card">
+            <h1>Test card</h1>
+            <p>Some content goes here</p>
+        </div>
+    </div>
+</section>
 <div style="height: 1800px;">
 
 </div>
