Started implementing login page

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -1,5 +1,6 @@
 :root {
     --primary-colour: #267bc5;
+    --primary-colour-rgb: 38 123 197;
     --primary-colour-secondary: #557ebb;
     --secondary-colour: #E98520;
     --white: #FFFFFF;
