--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -24,8 +24,17 @@ body {
     box-sizing: inherit;
 }
 
-h1, h2, h3, h4, h5, h6, a {
+h1, h2, h3, h4, h5, h6 {
     font-family: 'Poppins', Arial, Helvetica, sans-serif;
+}
+
+a {
+    text-decoration: none;
+    color: #635bff;
+
+    &:hover {
+        color: gray;
+    }
 }
 
 .button {
@@ -35,6 +44,10 @@ h1, h2, h3, h4, h5, h6, a {
     transition: 0.1s;
     transition-property: background-color;
     font-weight: bold;
+    border: none;
+    font-family: 'Poppins', Arial, Helvetica, sans-serif;
+    font-size: 16px;
+    cursor: pointer;
 
     &.transparent {
         background-color: hsla(0, 0%, 100%, 0.2);
@@ -51,6 +64,15 @@ h1, h2, h3, h4, h5, h6, a {
 
         &:hover {
             background-color: hsl(0, 0%, 90%);
+        }
+    }
+
+    &.primary {
+        color: white;
+        background-color: var(--primary-colour);
+
+        &:hover {
+            background-color: var(--primary-colour);
         }
     }
 
@@ -73,12 +95,20 @@ h1, h2, h3, h4, h5, h6, a {
     height: 100%;
 }
 
+.w-100 {
+    width: 100%;
+}
+
 .d-flex {
     display: flex;
 }
 
 .flex-align-items-center {
     align-items: center;
+}
+
+.flex-justify-items-center {
+    justify-content: center;
 }
 
 .flex-item-50 {
@@ -124,12 +154,20 @@ h1, h2, h3, h4, h5, h6, a {
 }
 
 .card {
-    box-shadow: 0 0.2rem 0.8rem rgba(0,0,0,0.2);
-    border-radius: 1rem;
-    padding: 1rem;
+    box-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.2);
+    border-radius: 0.4rem;
+    padding: 2rem 3.5rem;
+}
+
+// Padding/Margin utilities
+
+.mt-0 {
+    margin-top: 0;
 }
 
 .pt-1 {
     padding-top: 1rem;
 }
+
+// Padding/Margin utilities end
 
