Implement footer, various style changes, reset page and back button service.

--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,11 +1,3 @@
 <app-navbar></app-navbar>
 <router-outlet></router-outlet>
-<footer class="overflow-hidden">
-    <div class="footer-background-mask-container overflow-hidden">
-        <div class="footer-background-mask"></div>
-    </div>
-    <div class="container position-relative footer-content">
-        <h1>Hello</h1>
-        <p>This is some test content</p>
-    </div>
-</footer>
+<app-footer></app-footer>
