--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -36,11 +36,11 @@
     <h2 class="text-section-header">Examples of our work</h2>
     <app-carousel></app-carousel>
 </section>
-<section class="container pt-1">
+<main class="container pt-2 pb-2">
     <div class="grid">
         <div class="col-6">
-            <div class="card h-100 d-flex flex-direction-column flex-justify-content-between">
-                <h2>About us</h2>
+            <div class="h-100 d-flex flex-direction-column flex-justify-content-between">
+                <h1>About us</h1>
                 <p>Read our origins as a company and our company values.</p>
                 <div class="mt-1">
                     <a [routerLink]="['/about']" class="button primary large"><span>View <i class="bi bi-arrow-right-short"></i></span></a>
@@ -48,8 +48,8 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="card h-100 d-flex flex-direction-column flex-justify-content-between">
-                <h2>Our services</h2>
+            <div class="h-100 d-flex flex-direction-column flex-justify-content-between">
+                <h1>Our services</h1>
                 <p>We provide a variety of services to meet our client's needs; from small to large we have a services plan that should suit.</p>
                 <div class="mt-1">
                     <a [routerLink]="['/services']" class="button primary large"><span>View <i class="bi bi-arrow-right-short"></i></span></a>
@@ -57,4 +57,4 @@
             </div>
         </div>
     </div>
-</section>
+</main>
