--- a/client/src/app/components/admin/reset/reset.component.html
+++ b/client/src/app/components/admin/reset/reset.component.html
@@ -1,19 +1,11 @@
 <div class="container">
     <div class="d-flex flex-justify-items-center flex-align-items-center h-100">
         <div class="card">
-            <div [formGroup]="loginForm" class="form-centre">
-                <h2 class="mt-0">Admin sign in</h2>
+            <div [formGroup]="resetForm" class="form-centre">
+                <h2 class="mt-0">Reset your password</h2>
                 <div class="input-container">
                     <label for="email">Email</label>
                     <input id="email" type="email" formControlName="email" placeholder="example@example.com">
-                </div>
-                
-                <div class="input-container">
-                    <div class="d-flex forgot-password">
-                        <label for="password">Password</label>
-                        <a [routerLink]="['reset']">Forgot your password?</a>
-                    </div>
-                    <input id="password" type="password" formControlName="password">
                 </div>
                 
                 <div class="d-flex">
@@ -24,4 +16,3 @@
         </div>
     </div>
 </div>
-
