--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -72,7 +72,16 @@ a {
         background-color: var(--primary-colour);
 
         &:hover {
-            background-color: var(--primary-colour);
+            background-color: #1f66a3;
+        }
+    }
+
+    &.grey {
+        color: black;
+        background-color: rgb(235, 235, 235);
+
+        &:hover {
+            background-color: #d4d4d4;
         }
     }
 
@@ -127,8 +136,13 @@ a {
 .flex-item-50 {
     width: 50%;
 }
+
+.flex-1 {
+    flex: 1;
+}
 // Flex helpers end
 
+// Text helpers
 .text-large {
     font-size: 7rem;
     font-weight: bold;
@@ -147,6 +161,11 @@ a {
     color: white;
 }
 
+.text-muted {
+    color: gray;
+}
+// Text helpers end
+
 .swiper {
     width: 100%;
     height: 600px;
@@ -161,7 +180,6 @@ a {
 }
 
 .card {
-    box-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.2);
     border-radius: 0.4rem;
     padding: 2rem 3.5rem;
 
@@ -170,11 +188,15 @@ a {
     }
 }
 
+.shadow-sm {
+    box-shadow: 0 0.3rem 0.5rem rgba(0,0,0,0.2);
+}
+
 // Grid system
 .grid {
     display: grid;
     grid-template-columns: repeat(12, 1fr);
-    gap: 1rem;
+    gap: 1.5rem;
 
     .col-2 {
         grid-column: auto/span 2;
@@ -203,7 +225,6 @@ a {
 // Grid system end
 
 // Padding/Margin utilities
-
 .mt-0 {
     margin-top: 0;
 }
@@ -220,39 +241,80 @@ a {
     margin: 1rem 0;
 }
 
+.ml-1 {
+    margin-left: 1rem;
+}
+
+.ml-2 {
+    margin-left: 2rem;
+}
+
+.mr-1 {
+    margin-right: 1rem;
+}
+
+.mr-auto {
+    margin-right: auto;
+}
+
+.ml-auto {
+    margin-left: auto;
+}
+
 .pt-1 {
     padding-top: 1rem;
 }
 
+.pt-2 {
+    padding-top: 2rem;
+}
+
+.pb-1 {
+    padding-bottom: 1rem;
+}
+
+.pb-2 {
+    padding-bottom: 2rem;
+}
+
 // Padding/Margin utilities end
-.footer-background-mask-container {
-    position: absolute;
-    width: 100%;
-    height: 100%;
-}
-
-.footer-background-mask {
-    height: 100%;
-    width: 100%;
-    top: 0;
-    left: 0;
-    transform-origin: 100% 0;
-    transform: skewY(-3deg);
-    background: #f6f9fc;
-}
-
-.footer-content {
-    padding-top: 6.5rem;
-}
-
-.position-relative {
-    position: relative;
-}
-
-.position-absolute {
-    position: absolute;
-}
 
 .overflow-hidden {
     overflow: hidden;
 }
+
+// Forms
+.input-container {
+    margin: 1.5rem 0;
+}
+
+.form-centre {
+    min-width: 400px;
+}
+
+label {
+    display: block;
+    color: rgb(79, 77, 104);
+    font-size: 14px;
+    font-weight: bold;
+    font-stretch: expanded;
+}
+
+input {
+    padding: 8px 14px;
+    border-radius: 5px;
+    border: 1px rgba(128, 128, 128, 0.322) solid;
+    margin: 0.5rem 0;
+    width: 100%;
+    font-size: 16px;
+    line-height: 28px;
+    outline-width: 0;
+    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
+    min-height: 44px;
+
+    &:focus {
+        border-color: var(--primary-colour);
+        box-shadow: 0 0 0 0.25rem rgb(var(--primary-colour-rgb) / 25%);
+    }
+}
+// Forms end
