--- a/client/src/app/components/admin/login/login.component.html
+++ b/client/src/app/components/admin/login/login.component.html
@@ -18,7 +18,7 @@
                 
                 <div class="d-flex">
                     <button appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
-                    <button type="submit" class="button primary flex-1"><span>Continue <i class="bi bi-arrow-right-short"></i></span></button>
+                    <button (click)="login()" class="button primary flex-1"><span>Continue <i class="bi bi-arrow-right-short"></i></span></button>
                 </div>
             </div>
         </div>
