--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -225,6 +225,15 @@ a {
 // Grid system end
 
 // Padding/Margin utilities
+.my-0 {
+    margin-top: 0;
+    margin-bottom: 0;
+}
+
+.my-1 {
+    margin: 1rem 0;
+}
+
 .mt-0 {
     margin-top: 0;
 }
@@ -237,8 +246,8 @@ a {
     margin-top: 2rem;
 }
 
-.my-1 {
-    margin: 1rem 0;
+.mb-1 {
+    margin-bottom: 1rem;
 }
 
 .ml-1 {
