--- a/client/src/app/components/admin/login/login.component.html
+++ b/client/src/app/components/admin/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="d-flex flex-justify-items-center flex-align-items-center h-100">
         <div class="card">
-            <div [formGroup]="loginForm" class="form-centre">
+            <form [formGroup]="loginForm" class="form-centre" (ngSubmit)="login()">
                 <h2 class="mt-0">Admin sign in</h2>
                 <div class="input-container">
                     <label for="email">Email</label>
@@ -17,10 +17,10 @@
                 </div>
                 
                 <div class="d-flex">
-                    <button appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
-                    <button (click)="login()" [disabled]="loginForm.invalid" class="button primary flex-1"><span>Continue <i class="bi bi-arrow-right-short"></i></span></button>
+                    <button type="button" appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
+                    <button type="submit" [disabled]="loginForm.invalid" class="button primary flex-1"><span>Continue <i class="bi bi-arrow-right-short"></i></span></button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
