--- a/client/src/app/components/admin/reset-confirm/reset-confirm.component.html
+++ b/client/src/app/components/admin/reset-confirm/reset-confirm.component.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="d-flex flex-justify-items-center flex-align-items-center h-100">
         <div class="card">
-            <div [formGroup]="resetConfirmForm" class="form-centre">
+            <form [formGroup]="resetConfirmForm" class="form-centre" (ngSubmit)="resetConfirm()">
                 <h2 class="mt-0">Create new password</h2>
                 <div class="input-container">
                     <label for="newPassword">New Password</label>
@@ -17,12 +17,12 @@
                 </div>
 
                 <div class="d-flex">
-                    <button appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
-                    <button (click)="resetConfirm()" [disabled]="resetConfirmForm.invalid"
+                    <button type="button" appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
+                    <button type="submit" [disabled]="resetConfirmForm.invalid"
                         class="button primary flex-1"><span>Continue <i
                                 class="bi bi-arrow-right-short"></i></span></button>
                 </div>
-            </div>
+            </form>
         </div>
     </div>
 </div>
