--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -1,21 +1,35 @@
 <header>
     <nav>
         <div class="nav-container" [class.dark]="(navigationSerivce.subscribeToNavViewPreference() | async)">
-            <a [routerLink]="['/']" class="logo-container" [ngSwitch]="navigationSerivce.subscribeToNavViewPreference() | async">
+            <a [routerLink]="['/']" class="logo-container"
+                [ngSwitch]="navigationSerivce.subscribeToNavViewPreference() | async">
                 <img src="/assets/static/images/logo-dark.png" alt="Logo" class="logo" *ngSwitchCase="true">
                 <img src="/assets/static/images/logo-white.png" alt="Logo" class="logo" *ngSwitchDefault>
             </a>
-            <div>
+            <div class="middle-container">
                 <ul>
                     <li><a [routerLink]="['/about']">About</a></li>
                     <li><a [routerLink]="['/services']">Services</a></li>
                     <li><a [routerLink]="['/gallery']">Gallery</a></li>
                 </ul>
             </div>
-            <div *ngIf="(authService.subscribeToAuthenticated() | async)">
-                Logged in
+            <div class="right-container d-flex flex-align-items-center flex-justify-flex-end">
+                <div class="position-relative">
+                    <button (click)="toggle()" class="button transparent mr-1 dropdown-toggle"
+                        [class.expanded]="expanded" *ngIf="(authService.subscribeToAuthenticated() | async)"
+                        @slideInOut>Admin
+                        <i class="bi bi-caret-right-fill"></i>
+                    </button>
+                    <div class="dropdown shadow-sm" *ngIf="expanded" @fadeInOut>
+                        <a class="button white mb-1" [routerLink]="['/', 'admin', 'users']">Manage users</a>
+                        <a class="button white mb-1" [routerLink]="['/', 'admin', 'account']">Manage account</a>
+                        <button class="button white w-100" (click)="logout()">Logout <i
+                                class="bi bi-box-arrow-left"></i></button>
+                    </div>
+                </div>
+                <a [routerLink]="['/contact']" class="button transparent"><span>Contact us <i
+                            class="bi bi-arrow-right-short"></i></span></a>
             </div>
-            <a [routerLink]="['/contact']" class="button transparent"><span>Contact us <i class="bi bi-arrow-right-short"></i></span></a>
         </div>
     </nav>
 </header>
