--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -10,7 +10,7 @@ nav {
     max-width: 80%;
     margin: 0 auto;
     color: white;
-    z-index: 3;
+    z-index: 1010;
 }
 
 .nav-container {
@@ -20,17 +20,19 @@ nav {
     align-items: center;
 
     &.dark {
-        ul {  
-            a {
-                color: rgb(0, 0, 0);
-            }
-
-            li:hover {
-                background-color: rgba(0, 0, 0, 0.082);
-            }
-            
-            a:hover {
-                color: rgb(54, 54, 54);
+        .middle-container {
+            ul {  
+                a {
+                    color: rgb(0, 0, 0);
+                }
+    
+                li:hover {
+                    background-color: rgba(0, 0, 0, 0.082);
+                }
+                
+                a:hover {
+                    color: rgb(54, 54, 54);
+                }
             }
         }
 
@@ -49,6 +51,45 @@ nav {
 
 .logo-container {
     text-decoration: none;
+    flex: 1;
+}
+
+.middle-container {
+    flex: 1;
+
+    ul {
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        list-style: none;
+        margin: 0;
+        padding: 0;
+    
+        li {
+            padding: 6px 20px;
+            border-radius: 2rem;
+            transition: 0.1s background-color;
+        }
+    
+        li:hover {
+            background-color: rgba(255, 255, 255, 0.151);
+        }
+    
+        a {
+            text-decoration: none;
+            color: white;
+            transition: 0.1s color;
+            font-weight: bold;
+        }
+        
+        a:hover {
+            color: rgb(219, 219, 219);
+        }
+    }
+}
+
+.right-container {
+    flex: 1;
 }
 
 .logo {
@@ -61,32 +102,48 @@ nav {
     }
 }
 
-ul {
-    display: flex;
-    align-items: center;
-    list-style: none;
-    margin: 0;
-    padding: 0;
-
-    li {
-        padding: 6px 20px;
-        border-radius: 2rem;
-        transition: 0.1s background-color;
+.dropdown-toggle {
+    i::before {
+        transition: .2s ease-in;
+        transition-property: transform;
     }
 
-    li:hover {
-        background-color: rgba(255, 255, 255, 0.151);
-    }
-
-    a {
-        text-decoration: none;
-        color: white;
-        transition: 0.1s color;
-        font-weight: bold;
-    }
-    
-    a:hover {
-        color: rgb(219, 219, 219);
+    &.expanded {
+        i::before {
+            transform: rotate(90deg);
+        }
     }
 }
+
+.dropdown {
+    position: absolute;
+    min-width: 250px;
+    border-radius: 0.5rem;
+    z-index: 1005;
+    right: 1rem;
+    margin-top: 10px;
+    color: white;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    box-shadow: inset 0 0 0 200px rgba(70, 70, 70, 0.7);
+    padding: 1rem 0.5rem;
+
+    &::after {
+        content: "";
+        position: absolute;
+        bottom: 100%;
+        right: 50px;
+        margin-left: -5px;
+        border-width: 8px;
+        border-style: solid;
+        border-color: transparent transparent rgba(70, 70, 70, 0.7) transparent;
+    }
+    
+    a {
+        display: block;
+        text-align: center;
+    }
+}
+
+
 
