Implement advanced text editing, including saving changes, getting data on page load etc.

--- a/client/src/_variables.scss
+++ b/client/src/_variables.scss
@@ -9,3 +9,9 @@
 }
 
 $error-colour: #da0707;
+$error-colour-hover: #a70606;
+$secondary-colour: #E98520;
+$secondary-colour-hover: #a75c12;
+
+$primary-colour-secondary: #557ebb;
+$primary-colour-secondary-hover: #385b8f;
