--- a/client/src/app/shared/components/toast/toast-container/toast-container.component.html
+++ b/client/src/app/shared/components/toast/toast-container/toast-container.component.html
@@ -1,3 +1,5 @@
-<div *ngFor="let toast of toastService.toastMessages$ | async; let i = index" @verticalCollapse @triggerChildAnimation>
-    <app-toast-item (closeItem)="closeToast(i)" [toastMessage]="toast"></app-toast-item>
+<div class="toast-padding">
+    <div *ngFor="let toast of toastService.toastMessages$ | async; let i = index" @verticalCollapse @triggerChildAnimation>
+        <app-toast-item (closeItem)="closeToast(i)" [toastMessage]="toast"></app-toast-item>
+    </div>
 </div>
