--- a/client/src/app/components/admin/reset/reset.component.html
+++ b/client/src/app/components/admin/reset/reset.component.html
@@ -4,7 +4,7 @@
             <form [formGroup]="resetForm" class="form-centre" (ngSubmit)="requestReset()">
                 <h2 class="mt-0">Reset your password</h2>
                 <div class="input-container">
-                    <label for="email">Email</label>
+                    <label for="email">Email <span class="required-asterisk">*</span></label>
                     <input id="email" type="email" formControlName="email" placeholder="example@example.com">
                 </div>
                 
