--- a/client/src/app/components/pages/home/home.component.html
+++ b/client/src/app/components/pages/home/home.component.html
@@ -39,7 +39,7 @@
 <main class="container pt-2 pb-2">
     <div class="grid">
         <div class="col-6">
-            <div class="h-100 d-flex flex-direction-column flex-justify-content-between">
+            <div class="h-100 d-flex flex-direction-column flex-justify-content-between text-centre-md">
                 <app-advanced-text-editor [pageSection]="pageContent.data?.homeCardFirst"></app-advanced-text-editor>
                 <div class="mt-1">
                     <a [routerLink]="['/about']" class="button primary large"><span>View <i class="bi bi-arrow-right-short"></i></span></a>
@@ -47,7 +47,7 @@
             </div>
         </div>
         <div class="col-6">
-            <div class="h-100 d-flex flex-direction-column flex-justify-content-between">
+            <div class="h-100 d-flex flex-direction-column flex-justify-content-between text-centre-md">
                 <app-advanced-text-editor [pageSection]="pageContent.data?.homeCardSecond"></app-advanced-text-editor>
                 <div class="mt-1">
                     <a [routerLink]="['/services']" class="button primary large"><span>View <i class="bi bi-arrow-right-short"></i></span></a>
