--- a/client/src/app/components/pages/home/home.component.scss
+++ b/client/src/app/components/pages/home/home.component.scss
@@ -25,7 +25,7 @@
 }
 
 .image-stack {
-    padding: 5rem;
+    padding: 3rem 3.5rem 3rem 3.5rem;
     display: grid;
     grid-template-columns: repeat(12, 1fr);
     position: relative;
@@ -86,5 +86,23 @@
         .image-stack-item:nth-child(3) {
             transform: rotate(4deg);
         }
+    }
+}
+
+@media (max-width: 1024px) {
+    .image-stack {
+        padding: 0.5rem;
+    }
+}
+
+@media (max-width: 768px) {
+    .image-stack {
+        padding: 0 5.5rem 5rem 5.5rem;
+    }
+}
+
+@media (max-width: 480px) {
+    .image-stack {
+        padding: 0 3rem 5rem 3rem;
     }
 }
