Started work on mobile nav

--- a/client/src/styles.scss
+++ b/client/src/styles.scss
@@ -463,5 +463,9 @@ label {
     .text-centre-md {
         text-align: center;
     }
+
+    .text-section-header {
+        text-align: center;
+    }
 }
 // Media queries end
