--- a/client/src/app/shared/components/navbar/navbar.component.html
+++ b/client/src/app/shared/components/navbar/navbar.component.html
@@ -31,5 +31,26 @@
                             class="bi bi-arrow-right-short"></i></span></a>
             </div>
         </div>
+        <div class="mobile-nav-container" [class.dark]="(navigationSerivce.subscribeToNavViewPreference() | async)">
+            <div class="mobile-menu-button">
+                <i class="bi bi-list" (click)="expandSidenav()"></i>
+            </div>
+            <a [routerLink]="['/']" class="logo-container"
+                [ngSwitch]="navigationSerivce.subscribeToNavViewPreference() | async">
+                <img src="/assets/static/images/logo-dark.png" alt="Logo" class="logo" *ngSwitchCase="true">
+                <img src="/assets/static/images/logo-white.png" alt="Logo" class="logo" *ngSwitchDefault>
+            </a>
+        </div>
     </nav>
 </header>
+<div class="sidenav" [class.show]="!sideNavExpanded">
+    <div class="sidenav-header">
+        <a [routerLink]="['/']" class="logo-container">
+                <img src="/assets/static/images/logo-white.png" alt="Logo" class="logo">
+        </a>
+        <i class="bi bi-x" (click)="expandSidenav()"></i>
+    </div>
+</div>
+<div class="sidenav-overlay" (click)="expandSidenav()" *ngIf="sideNavExpanded" @fadeInOut>
+
+</div>
