--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -145,6 +145,80 @@ nav {
     }
 }
 
+.mobile-nav-container {
+    display: none;
+    max-width: 98%;
+    margin: 0 auto;
+    padding: 5px 0;
+
+    i {
+        font-size: 3.5em;
+
+        &:hover {
+            opacity: 0.8;
+        }
+    }
+
+    .logo-container {
+        margin-left: auto;
+        flex: none;
+    }
+
+    &.dark {
+        i {
+            color: black;
+        }
+    }
+}
+
+.sidenav {
+    position: fixed;
+    top: 0;
+    left: 0;
+    bottom: 0;
+    z-index: 1030;
+    width: 280px;
+    -webkit-backdrop-filter: blur(8px);
+    backdrop-filter: blur(8px);
+    box-shadow: inset 0 0 0 200px rgba(70, 70, 70, 0.85);
+    color: white;
+    transition: 0.2s left;
+    border-right: 1px solid #636363;
+
+    .sidenav-header {
+        display: flex;
+        align-items: center;
+        border-bottom: 1px solid #636363;
+        padding: 15px 10px;
+
+        .bi-x {
+            font-size: 2.5em;
+            margin-left: auto;
+            transition: 0.2s opacity;
+            background-color: rgba(255, 255, 255, 0.144);
+            border-radius: 1rem;
+    
+            &:hover {
+                opacity: 0.8;
+            }
+        }
+    }
+
+    &.show {
+        left: -300px;
+    }
+}
+
+.sidenav-overlay {
+    position: fixed;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-color: rgba(0, 0, 0, 0.5);
+    z-index: 1020;
+}
+
 .logo-container-md {
     flex: 0.6;
 }
@@ -164,16 +238,13 @@ nav {
         max-width: 98%;
     } 
 
-    .logo-container-md {
-        flex: 0.5;
+    .nav-container {
+        display: none;
     }
 
-    .middle-container {
-        ul {
-            li {
-                padding: 6px 10px;
-            }
-        }
+    .mobile-nav-container {
+        display: flex;
+        align-items: center;
     }
 }
 
