--- a/client/src/app/components/pages/contact/contact.component.html
+++ b/client/src/app/components/pages/contact/contact.component.html
@@ -40,7 +40,7 @@
                     </div>
     
                     <div class="d-flex">
-                        <button type="button" appBackButton class="button grey mr-1"><i class="bi bi-arrow-left-short"></i> Back</button>
+                        <button type="button" (click)="resetForm()" class="button danger mr-1">Cancel <i class="bi bi-x-lg"></i></button>
                         <button type="submit" [disabled]="contactForm.invalid"
                             class="button primary flex-1"><span>Send <i
                                     class="bi bi-arrow-right-short"></i></span></button>
