--- a/client/src/app/shared/components/navbar/navbar.component.scss
+++ b/client/src/app/shared/components/navbar/navbar.component.scss
@@ -207,6 +207,56 @@ nav {
     &.show {
         left: -300px;
     }
+
+    .sidenav-links {
+        ul {
+            list-style: none;
+            padding: 15px 10px;
+            margin: 0;
+            text-align: center;
+            font-size: 20px;
+        
+            li {
+                padding: 10px 20px;
+                margin-bottom: 10px;
+                border-radius: 2rem;
+                transition: 0.1s background-color;
+                background-color: rgba(255, 255, 255, 0.123);
+
+                &:last-child {
+                    margin-bottom: 0;
+                }
+            }
+        
+            li:hover {
+                background-color: rgba(255, 255, 255, 0.219);
+            }
+        
+            a {
+                text-decoration: none;
+                color: white;
+                transition: 0.1s color;
+                font-weight: bold;
+            }
+            
+            a:hover {
+                color: rgb(219, 219, 219);
+            }
+
+            button {
+                background-color: transparent;
+                color: white;
+                border: none;
+                font-size: 20px;
+                font-weight: bold;
+                padding: 0;
+            }
+        }
+    }
+
+    .border-top {
+        border-top: 1px solid #636363;
+    }
 }
 
 .sidenav-overlay {
